[gd_scene load_steps=5 format=3 uid="uid://cj21h30daesjw"]

[ext_resource type="Script" path="res://scenes/auto.gd" id="1_nxown"]
[ext_resource type="Texture2D" uid="uid://b8x522oe3tqne" path="res://auto_png.png" id="2_3eevy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au2ok"]
size = Vector2(96, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4124p"]
size = Vector2(128, 32)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_nxown")

[node name="AutoPng" type="Sprite2D" parent="."]
position = Vector2(1.52588e-05, -7.99999)
scale = Vector2(0.428889, 0.428889)
texture = ExtResource("2_3eevy")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_au2ok")
metadata/_edit_lock_ = true

[node name="interaction_zone" type="Area2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_zone"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_4124p")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2(0, -120)
zoom = Vector2(1.325, 1.325)
metadata/_edit_lock_ = true

[connection signal="body_entered" from="interaction_zone" to="." method="_on_interaction_zone_body_entered"]
[connection signal="body_exited" from="interaction_zone" to="." method="_on_interaction_zone_body_exited"]
